# qtwayland-webos

./: .cmake.conf  CMakeLists.txt  README.md  oss-pkg-info.yaml  qtwayland-webos.pro  sync.profile
cmake/: FindCRIU.cmake
include/: securecoding.h
src/: CMakeLists.txt  src.pro
src/plugins/: CMakeLists.txt  plugins.pro
src/plugins/hardwareintegration/: CMakeLists.txt  hardwareintegration.pro
src/plugins/hardwareintegration/compositor/: CMakeLists.txt  compositor.pro
src/plugins/hardwareintegration/compositor/webos-wayland-egl/: CMakeLists.txt  main.cpp  webos-wayland-egl-plugin.pro  webos-wayland-egl-support.pro  webos-wayland-egl.pro  weboseglclientbufferintegration.cpp  weboseglclientbufferintegration.h
src/plugins/hardwareintegration/compositor/webos-wayland-egl/webos-wayland-egl-plugin/: CMakeLists.txt  main.cpp
src/plugins/hardwareintegration/compositor/webos-wayland-egl/webos-wayland-egl-support/: CMakeLists.txt  webos-wayland-egl-support.pro  weboseglclientbufferintegration.cpp  weboseglclientbufferintegration_p.h
src/plugins/platforminputcontexts/: CMakeLists.txt  platforminputcontexts.pro
src/plugins/platforminputcontexts/wayland/: CMakeLists.txt  keysymhelper.h  main.cpp  wayland.json  wayland.pro  waylandinputcontext.cpp  waylandinputcontext.h
src/plugins/wayland-shell-integration/: CMakeLists.txt  wayland-shell-integration.pro
src/plugins/wayland-shell-integration/webos/: CMakeLists.txt  main.cpp  webos.json  webos.pro
src/webos-platform-interface/: CMakeLists.txt  appsnapshotmanager.cpp  appsnapshotmanager.h  appsnapshotmanager_p.h  webos-platform-interface.pc.in  webos-platform-interface.pro  webosforeign.cpp  webosforeign.h  webosforeign_p.h  webosinputmanager.cpp  webosinputmanager.h  webosinputmanager_p.h  webosinputpanellocator.cpp  webosinputpanellocator.h  webosinputpanellocator_p.h  webosplatform.cpp  webosplatform.h  webosplatform_p.h  webospresentationtime.cpp  webospresentationtime.h  webospresentationtime_p.h  webosshell.cpp  webosshell.h  webosshell_p.h  webosshellintegration.cpp  webosshellintegration.h  webosshellsurface.cpp  webosshellsurface.h  webosshellsurface_p.h  webossurfacegroup.cpp  webossurfacegroup.h  webossurfacegroup_p.h  webossurfacegroupcompositor.cpp  webossurfacegroupcompositor.h  webossurfacegroupcompositor_p.h  webossurfacegrouplayer.cpp  webossurfacegrouplayer.h  webossurfacegrouplayer_p.h  webostablet.cpp  webostablet.h  (+3 more)
